- Fix bitmask memory leaks, numa_alloc_onnode/numa_preferred (Kornilios Kourtis)
- Add numa_node_of_cpu() to retrieve local node of a cpu (Kornilios Kourtis)
- Fix parsing of /proc/self/status (Brice Goglin/Lee Shermerhorn)
- Small reorganization of numa_alloc_local() (L.S.)
- Fixes of bitmask memory leaks in about eight functions (L.S.)
- Make library always return allocated masks that user can free (L.S.)
- Fix to numademo memtest (allocation overhead) (L.S.)
- Fix to checkaffinity test (possible shell errors) (L.S.)
- Fix a printf in migspeed.c (Frederik Himpe)
- Fix test/regress grep of node number (Cliff W.)
- Change numademo to finish in a timely manner on large machines (Cliff W.)
- tested on 96p 48nodes

2.0.3-rc1 - rc4
- Add --dump-nodes option to numactl (Andi)

2.0.3 released in June, 2009

2.0.4-rc3
- Fix numactl for a machine with sparse cpu ids (Anton Blanchard)
- Fix makefile to remove move_pages on make clean (Andi)
- Fix numa_node_to_cpus() (Sharyathi Nagesh)
- Rename 'thread' to 'task' (L.S.)
- Remove other trailing spaces (Cliff)
- Man page correction/clarification for numa_node_to_cpus() (Ian Wienand)
- Man page clarification for numactl (Mike MacCana)
- Fix numactl --hardware for cpu-less nodes (Thomas Renninger)
- Fix set_configured_cpus() (Jan Beulich)
- Fix memory corrupting use of strlen (Jan Beulich)
- Add a DSO destructor for memory deallocation (Neil Horman)

2.0.4 released in July, 2010

2.0.5 released in July, 2010 (about 2 days after 2.0.4)
- Fix numactl calls to set_mempolicy, get_mempolicy and mbind

newer:
- include stat.h in shm.c (Mike Frysinger)

2.0.6-rc1
- Correct numa_max_node() use of broken numa_num_configured_nodes() (Tim Pepper)
- Use numa_max_node() not numa_num_configured_nodes() (Tim Pepper)
- Fix numa_num_configured_nodes() to match man page description (Tim Pepper)
- Clarify comment for numa_all_nodes_ptr extern (Tim Pepper)
- numactl --hardware should handle sparse node numbering (Tim Pepper)